--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         <div class="container">
             <h2 style="display: inline;" class="section-title">Singles <a href="https://cheekyjmusic.github.io/music/singles.html" class="expand-singles">Expand</a></h2>
             <div class="item-container">
-                <div class="item" onclick="play('Hammock')">
+                <div id="unreleased" class="item" onclick="play('Hammock')">
                     <img class="item-image" src="https://cheekyjmusic.github.io/music/assets/Hammock.png">
                     <p class="item-name">Hammock</p>
                 </div>
@@ -334,37 +334,15 @@
 
         window.onload = checkDev;
         function checkDev(){
+            var admin = 0;
             const urlParams = new URLSearchParams(window.location.search);
-            const admin = urlParams.get("admin");
+            admin = urlParams.get("admin");
+            const unreleased = document.getElementById('unreleased');
 
-            if(admin === '1' ){
-                // Step 1: Select the parent element (replace 'parent-container' with the actual ID or selector of your parent container).
-const parentContainer = document.querySelector('.item-container');
-
-// Step 2: Create the new div element.
-const newDiv = document.createElement('div');
-
-// Step 3: Set attributes for the new div element.
-newDiv.setAttribute('class', 'item');
-newDiv.setAttribute('onclick', 'play("Hammock")');
-
-// Step 4: Create and set attributes for the image element.
-const newImage = document.createElement('img');
-newImage.setAttribute('class', 'item-image');
-newImage.setAttribute('src', 'https://cheekyjmusic.github.io/music/assets/Hammock.png');
-
-// Step 5: Create and set attributes for the paragraph element.
-const newParagraph = document.createElement('p');
-newParagraph.setAttribute('class', 'item-name');
-newParagraph.textContent = 'Hammock';
-
-// Step 6: Append the image and paragraph elements to the new div element.
-newDiv.appendChild(newImage);
-newDiv.appendChild(newParagraph);
-
-// Step 7: Append the new div element to the parent container.
-parentContainer.appendChild(newDiv);
-
+            if(admin === 1){
+                alert('Welcome');
+            } else {
+                unreleased.remove();
             }
         }
         window.addEventListener('scroll', function() {
