--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
             admin = urlParams.get("admin");
             const unreleased = document.getElementById('unreleased');
 
-            if(admin === 1){
+            if(admin === '1'){
                 alert('Welcome');
             } else {
                 unreleased.remove();
