--- a/index.html
+++ b/index.html
@@ -252,6 +252,10 @@
         <div class="container">
             <h2 style="display: inline;" class="section-title">Singles <a href="https://cheekyjmusic.github.io/music/singles.html" class="expand-singles">Expand</a></h2>
             <div class="item-container">
+                <div id="unreleased" class="item" onclick="play('Hammock')">
+                    <img class="item-image" src="https://cheekyjmusic.github.io/music/assets/Hammock.png">
+                    <p class="item-name">Hammock</p>
+                </div>
               <div class="item" onclick="play('Big Hippo')">
                     <img class="item-image" src="https://cheekyjmusic.github.io/music/assets/BigHippo.png">
                     <p class="item-name">Big Hippo</p>
@@ -327,6 +331,20 @@
         <div class="progress-bar"></div>
     </div>
     <script>
+
+        window.onload = checkDev;
+        function checkDev(){
+            var admin = 0;
+            const urlParams = new URLSearchParams(window.location.search);
+            admin = urlParams.get("admin");
+            const unreleased = document.getElementById('unreleased');
+
+            if(admin === '1'){
+                alert('Welcome');
+            } else {
+                unreleased.remove();
+            }
+        }
         window.addEventListener('scroll', function() {
             var artistNameSticky = document.getElementById('artist-name-sticky');
             var scrollPosition = window.scrollY || window.pageYOffset;
