--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@
             <p onclick="play('Hotdog Stand')" class="popular">4<img class="popular-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/cheekyboomin.png">Hotdog Stand</p>
             <p onclick="play('Submarine')" class="popular">5<img class="popular-image" src="https://cheekyjmusic.github.io/music/assets/Submarine.png">Submarine</p>
             </div>
-            <!--<div class="artist-announcement">
+            <div class="artist-announcement">
                 <h1 class="announcement-title">Artist Announcement</h1>
-                <p id="announcement">Listen to Big Hippo</p>
-            </div>-->
+                <p id="announcement">Hammock 📝🔜🔜</p>
+            </div>
         </div>
 
         <div class="container">
@@ -244,7 +244,7 @@
             <a style="text-decoration: none;" href="https://cheekyjmusic.github.io/music/cheekyboomin.html">
                 <div class="item">
                     <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/cheekyboomin.png">
-                    <p class="item-name">Cheeky Boomin</p>
+                    <p class="item-name">Cheeky Boomin Vol 1</p>
                 </div>
             </a>
         </div>
