--- a/cheekyboomin2.html
+++ b/cheekyboomin2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Cheeky Boomin Vol 2</title>
-    <link rel="icon" href="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/cheekyboomin.png" type="image/x-icon">
+    <link rel="icon" href="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/cheekyboomin2.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Prompt&display=swap" rel="stylesheet">
@@ -73,7 +73,7 @@
             background-image: linear-gradient(to bottom, #00278b, black);
         }
         .progress-bar {
-            background-color: #8B4000 !important;
+            background-color: #00278b !important;
         }
         .password {
             height: 100%;
@@ -132,7 +132,7 @@
         <img class="album-cover" src="https://cheekyjmusic.github.io/music/assets/cheekyboomin2.png">
         <div class="album-details">
             <h1 class="album-name">Cheeky Boomin Vol 2</h1>
-            <h1 class="album-desc">Cheeky J · Unreleased · ? songs · Songs are not in final order</h1>
+            <h1 class="album-desc">Cheeky J · Unreleased · 8 songs · Songs are not in final order</h1>
         </div>
     </div>
     <div class="gradient-container"></div>
@@ -150,16 +150,16 @@
             <p class="song-title">4. Colosseum</p>
         </div>
         <div onclick="play('')" class="song">
-            <p class="song-title">5. Untitled</p>
+            <p class="song-title">5. Carwash</p>
         </div>
         <div onclick="play('')" class="song">
-            <p class="song-title">6. Untitled</p>
+            <p class="song-title">6. Train Tracks (prod. Daniel R)</p>
         </div>
 		  <div onclick="play('')" class="song">
-            <p class="song-title">7. Untitled</p>
+            <p class="song-title">7. Dasani</p>
         </div>
 		  <div onclick="play('')" class="song">
-            <p class="song-title">8. Untitled</p>
+            <p class="song-title">8. Boomin Cheeky</p>
         </div>
     </div>
 
@@ -198,7 +198,7 @@
         function askPassword(){
             var userInput = prompt("Password:");
             const password = document.querySelector('.password');
-            if (userInput === 'chocolate') {
+            if (userInput === 'gummybear') {
                 password.remove();
             } else {
                 alert('Wrong password');
