--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         .main-container {
             padding: 20px;
-            background: linear-gradient(to bottom, #282008 0%, black 7%);
+            background: linear-gradient(to bottom, #a38f5c 0%, black 7%);
         }
 
         .section-title {
@@ -120,7 +120,7 @@
   .artist-announcement {
     width: fit-content;
     height: fit-content;
-    background-color: #403927;
+    background-color: #a38f5c;
     border-radius: 12px;
     padding: 5px;
   }
@@ -143,7 +143,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    background-color:#282008;
+    background-color: #dcd0b1;
     z-index: 10;
     object-position: top;
     padding: 10px;
@@ -169,6 +169,9 @@
         background-color: rgba(0, 0, 0, 0.5);
         margin-top: 0px;
 
+     }
+     .menu-button-img {
+        filter: invert(0%);
      }
      
     </style>
@@ -213,7 +216,7 @@
     <div onclick="toggleMenu()" class="menu-shadow"></div>
 
     <div class="thumbnail-container">
-        <img src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/background.png" alt="artist-thumbnail">
+        <img src="https://cheekyjmusic.github.io/music/assets/background.png" alt="artist-thumbnail">
         <div class="artist-name-container">
             <p class="artist-name">Cheeky J</p>
         </div>
@@ -234,8 +237,8 @@
             <p onclick="play('Submarine')" class="popular">5<img class="popular-image" src="https://cheekyjmusic.github.io/music/assets/Submarine.png">Submarine</p>
             </div>
             <div class="artist-announcement">
-                <h1 class="announcement-title">Artist Announcement</h1>
-                <p id="announcement">Hammock 📝🔜🔜</p>
+                <h1 class="announcement-title">Announcement</h1>
+                <p id="announcement">"Hammock" Coming Soon🔜🔜</p>
             </div>
         </div>
 
