--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         .main-container {
             padding: 20px;
-            background: linear-gradient(to bottom, #a38f5c 0%, black 7%);
+            background: linear-gradient(to bottom, #403927 0%, black 7%);
         }
 
         .section-title {
@@ -120,7 +120,7 @@
   .artist-announcement {
     width: fit-content;
     height: fit-content;
-    background-color: #a38f5c;
+    background-color: #403927;
     border-radius: 12px;
     padding: 5px;
   }
@@ -143,7 +143,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    background-color: #dcd0b1;
+    background-color: #403927;
     z-index: 10;
     object-position: top;
     padding: 10px;
@@ -171,7 +171,7 @@
 
      }
      .menu-button-img {
-        filter: invert(0%);
+        filter: invert(0%) !important;
      }
      
     </style>
