--- a/home.html
+++ b/home.html
@@ -92,7 +92,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="covers/logo.png">
+        <img src="assets/logo.png">
        <h1>Music Museum - Home</h1>
     </div>
     <div class="artist-container">
