scheduled 20 Dollar Bill

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             </div>
             <div class="artist-announcement">
                 <h1 class="announcement-title">Announcement</h1>
-                <p id="announcement">"Hammock" Coming Soon🔜🔜</p>
+                <p id="announcement">20 Dollar Bill out October 31 @ 3pm</p>
             </div>
         </div>
 
@@ -255,6 +255,10 @@
         <div class="container">
             <h2 style="display: inline;" class="section-title">Singles <a href="https://cheekyjmusic.github.io/music/singles.html" class="expand-singles">Expand</a></h2>
             <div class="item-container">
+                <div id="upcoming" class="item" onclick="play('20 Dollar Bill')">
+                    <img class="item-image" src="https://cheekyjmusic.github.io/music/assets/20DollarBill.png">
+                    <p class="item-name">Big Hippo</p>
+                </div>
               <div class="item" onclick="play('Big Hippo')">
                     <img class="item-image" src="https://cheekyjmusic.github.io/music/assets/BigHippo.png">
                     <p class="item-name">Big Hippo</p>
