--- a/singles.html
+++ b/singles.html
@@ -118,6 +118,16 @@
             <a style="text-decoration: none;" href="https://cheekyjmusic.github.io/music/"><h2>Cheeky J - Discography</h2></a>
         </div>
         <div class="container">
+            <div id="upcoming" onclick="play('20 Dollar Bill')" class="single-container">
+                <img id='Big Hippo' src="https://cheekyjmusic.github.io/music/assets/20DollarBill.png">
+                <div class="single-details">
+                    <h2 class="single-name">20 Dollar Bill</h2>
+                    <p class="single-info">Single • 2023</p>
+                    <img src="https://cheekyjmusic.github.io/music/assets/playbutton.svg">
+                </div>
+            </div>
+        </div>
+        <div class="container">
             <div onclick="play('Big Hippo')" class="single-container">
                 <img id='Big Hippo' src="https://cheekyjmusic.github.io/music/assets/BigHippo.png">
                 <div class="single-details">
