--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             <div class="item-container">
                 <div id="upcoming" class="item" onclick="play('20 Dollar Bill')">
                     <img class="item-image" src="https://cheekyjmusic.github.io/music/assets/20DollarBill.png">
-                    <p class="item-name">Big Hippo</p>
+                    <p class="item-name">20 Dollar Bill</p>
                 </div>
               <div class="item" onclick="play('Big Hippo')">
                     <img class="item-image" src="https://cheekyjmusic.github.io/music/assets/BigHippo.png">
