--- a/singles.html
+++ b/singles.html
@@ -118,7 +118,7 @@
             <a style="text-decoration: none;" href="https://cheekyjmusic.github.io/music/"><h2>Cheeky J - Discography</h2></a>
         </div>
         <div class="container">
-            <div id="upcoming" onclick="play('20 Dollar Bill')" class="single-container">
+            <div onclick="play('20 Dollar Bill')" class="single-container">
                 <img id='Big Hippo' src="https://cheekyjmusic.github.io/music/assets/20DollarBill.png">
                 <div class="single-details">
                     <h2 class="single-name">20 Dollar Bill</h2>
