changed to youtube

--- a/index.html
+++ b/index.html
@@ -187,17 +187,9 @@
             <img src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/logo.png">
             <h1>Menu</h1>
         </div></a>
-        <a style="text-decoration: none;" href="https://cheekyjmusic.github.io/music/search.html"><div style="margin-top: 10px;" class="menu-item">
-            <img src="https://cdn-icons-png.flaticon.com/512/3031/3031293.png">
-            <h1>Search</h1>
-        </div></a>
         <a style="text-decoration: none;" href="https://cheekyjmusic.github.io/music/credits.txt"><div style="margin-top: 10px;" class="menu-item">
             <img src="https://cdn-icons-png.flaticon.com/512/864/864685.png">
             <h1>Credits</h1>
-        </div></a>
-        <a style="text-decoration: none;" href="https://cheekyjmusic.github.io/music/singles.html"><div style="margin-top: 10px;" class="menu-item">
-            <img src="https://cdn-icons-png.flaticon.com/512/1705/1705062.png">
-            <h1>Discography</h1>
         </div></a>
         <div onclick="fullscreen()" style="margin-top: 10px;" class="menu-item">
             <img src="https://cdn-icons-png.flaticon.com/512/3354/3354155.png">
@@ -206,10 +198,6 @@
         <a style="text-decoration: none;" href="https://cheekyjmusic.github.io/music/archive.html"><div style="margin-top: 10px;" class="menu-item">
             <img src="https://static.thenounproject.com/png/21032-200.png">
             <h1>Archive</h1>
-        </div></a>
-        <a style="text-decoration: none;" href="https://github.com/cheekyjmusic/music/issues/new"><div style="margin-top: 10px;" class="menu-item">
-            <img src="https://cdn-icons-png.flaticon.com/512/193/193224.png">
-            <h1>Report Bug</h1>
         </div></a>
     </div>
 
@@ -230,7 +218,7 @@
         <div class="top-container">
             <div class="artist-announcement">
                 <h1 class="announcement-title">Announcement</h1>
-                <p id="announcement">20 Dollar Bill out October 31 @ 3pm</p>
+                <p id="announcement">This website will not be updated very often.</p>
             </div>
         </div>
 
@@ -245,25 +233,29 @@
         </div>
 
         <div class="container">
-            <h2 style="display: inline;" class="section-title">Singles <a href="https://cheekyjmusic.github.io/music/singles.html" class="expand-singles">Expand</a></h2>
+            <h2 style="display: inline;" class="section-title">Singles</h2>
             <div class="item-container">
-                <div class="item" onclick="play('20 Dollar Bill')">
+                <div class="item" onclick="redirect('https://youtu.be/PuzJEMaGr74')">
+                    <img class="item-image" src="https://cheekyjmusic.github.io/music/assets/Supper.png">
+                    <p class="item-name">Supper</p>
+                </div>
+                <div class="item" onclick="redirect('https://youtu.be/AITecVD83O4')">
                     <img class="item-image" src="https://cheekyjmusic.github.io/music/assets/20DollarBill.png">
                     <p class="item-name">20 Dollar Bill</p>
                 </div>
-              <div class="item" onclick="play('Big Hippo')">
+              <div class="item" onclick="redirect('https://youtu.be/fL_9fgQ-BMs')">
                     <img class="item-image" src="https://cheekyjmusic.github.io/music/assets/BigHippo.png">
                     <p class="item-name">Big Hippo</p>
                 </div>
-                <div class="item" onclick="play('Omelette')">
+                <div class="item" onclick="redirect('https://youtu.be/xanhgXmEjWU')">
                     <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/Omelette.png">
                     <p class="item-name">Omelette</p>
                 </div>
-                <div class="item" onclick="play('Submarine')">
+                <div class="item" onclick="redirect('https://youtu.be/ftr6-m6AxHM')">
                     <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/Submarine.png">
                     <p class="item-name">Submarine</p>
                 </div>
-                <div class="item" onclick="play('Suburbs Freestyle Remix')">
+                <div class="item" onclick="redirect('https://youtu.be/hQlRNGllA_Y')">
                     <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/SuburbsFreestyleRemix.png">
                     <p class="item-name">SB Freestyle Remix</p>
                 </div>
@@ -283,21 +275,11 @@
                     <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/TacobellDiss.png">
                     <p class="item-name">Taco Bell Diss</p>
                 </div>
-                <div class="item" onclick="play('Suburbs Freestyle')">
+                <div class="item" onclick="redirect('https://youtu.be/i3mEd9xiAT0')">
                     <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/SuburbsFreestyle.png">
                     <p class="item-name">Suburbs Freestyle</p>
                 </div>
             </div>
-        </div>
-
-        <div class="container">
-            <h2 class="section-title">Music Videos</h2>
-            <a style="text-decoration: none;" href="https://youtu.be/i3mEd9xiAT0">
-                <div class="item">
-                    <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/suburbsvideo.png">
-                    <p class="item-name">Suburbs Freestyle</p>
-                </div>
-            </a>            
         </div>
         <div style="margin-bottom: 80px;" class="container">
             <h2 class="section-title">About</h2>
