--- a/cheekyboomin.html
+++ b/cheekyboomin.html
@@ -89,17 +89,9 @@
             <img src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/logo.png">
             <h1>Menu</h1>
         </div></a>
-        <a style="text-decoration: none;" href="https://cheekyjmusic.github.io/music/search.html"><div style="margin-top: 10px;" class="menu-item">
-            <img src="https://cdn-icons-png.flaticon.com/512/3031/3031293.png">
-            <h1>Search</h1>
-        </div></a>
         <a style="text-decoration: none;" href="https://cheekyjmusic.github.io/music/credits.txt"><div style="margin-top: 10px;" class="menu-item">
             <img src="https://cdn-icons-png.flaticon.com/512/864/864685.png">
             <h1>Credits</h1>
-        </div></a>
-        <a style="text-decoration: none;" href="https://cheekyjmusic.github.io/music/singles.html"><div style="margin-top: 10px;" class="menu-item">
-            <img src="https://cdn-icons-png.flaticon.com/512/1705/1705062.png">
-            <h1>Discography</h1>
         </div></a>
         <div onclick="fullscreen()" style="margin-top: 10px;" class="menu-item">
             <img src="https://cdn-icons-png.flaticon.com/512/3354/3354155.png">
@@ -126,22 +118,22 @@
     </div>
     <div class="gradient-container"></div>
     <div class="songs-container">
-        <div onclick="play('Cheeky Boomin')" class="song">
+        <div onclick="redirect('https://youtu.be/cwqmdsrj_ZM')" class="song">
             <p class="song-title">1. Cheeky Boomin (prod. XAR)</p>
         </div>
-        <div onclick="play('Submarine')" class="song">
+        <div onclick="redirect('https://youtu.be/ftr6-m6AxHM')" class="song">
             <p class="song-title">2. Submarine (Prod. by SIGHOST x Sixweeks)</p>
         </div>
-        <div onclick="play('Hotdog Stand')" class="song">
+        <div onclick="redirect('https://youtu.be/eUvsD7Y1E8E')" class="song">
             <p class="song-title">3. Hotdog Stand (prod. SIGHOST)</p>
         </div>
-        <div onclick="play('Metro Station')" class="song">
+        <div onclick="redirect('https://youtu.be/zGds6cqp8gI')" class="song">
             <p class="song-title">4. Metro Station (prod. SIGHOST)</p>
         </div>
-        <div onclick="play('Suburbs Freestyle Remix')" class="song">
+        <div onclick="redirect('https://youtu.be/i3mEd9xiAT0')" class="song">
             <p class="song-title">5. Suburbs Freestyle Remix</p>
         </div>
-        <div onclick="play('Mr Clean')" class="song">
+        <div onclick="redirect('https://youtu.be/1HpYavwjbzA')" class="song">
             <p class="song-title">6. Mr Clean (prod. makdouble)</p>
         </div>
     </div>
