--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             font-size: calc(100vw / 10);
             font-weight: bold;
             margin-bottom: 10px;
+            cursor: pointer;
         }
 
         .main-container {
@@ -183,7 +184,7 @@
     <link rel="stylesheet" type="text/css" href="https://cheekyjmusic.github.io/music/menu.css">
 </head>
 <body>
-    <div class="menu-button">
+    <!--<div class="menu-button">
         <img class="menu-button-img" onclick="toggleMenu()" src="https://static.thenounproject.com/png/3869892-200.png">
     </div>
     <div class="menu-container">
@@ -205,7 +206,7 @@
         </div></a>
     </div>
 
-    <div onclick="toggleMenu()" class="menu-shadow"></div>
+    <div onclick="toggleMenu()" class="menu-shadow"></div>-->
 
     <div class="thumbnail-container">
         <img src="https://cheekyjmusic.github.io/music/assets/background.jpg" alt="artist-thumbnail">
@@ -228,7 +229,7 @@
 
         <div class="container">
             <h2 class="section-title">Albums</h2>
-            <a style="text-decoration: none;" href="https://cheekyjmusic.github.io/music/cheekyboomin.html">
+            <a style="text-decoration: none;" href="https://youtube.com/playlist?list=PLJy9H5Xxyv18TxmBDFD4oMt_2azd__hM6&si=2IbFlvgsdLc99-h7">
                 <div class="item">
                     <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/cheekyboomin.png">
                     <p class="item-name">Cheeky Boomin Vol 1</p>
