--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         <div class="top-container">
             <div class="artist-announcement">
                 <h1 class="announcement-title">Announcement</h1>
-                <p id="announcement">This website will not be updated very often.</p>
+                <p id="announcement">This website will be discontinued soon.</p>
             </div>
         </div>
 
