--- a/index.html
+++ b/index.html
@@ -257,6 +257,10 @@
         <div class="container">
             <h2 style="display: inline;" class="section-title">Singles</h2>
             <div class="item-container">
+                <div class="item" onclick="redirect('https://youtu.be/g8q4cLlgqRM')">
+                    <img class="item-image" src="https://cheekyjmusic.github.io/music/assets/Edge.png">
+                    <p class="item-name">Edge</p>
+                </div>
                 <div class="item" onclick="redirect('https://youtu.be/PuzJEMaGr74')">
                     <img class="item-image" src="https://cheekyjmusic.github.io/music/assets/Supper.png">
                     <p class="item-name">Supper</p>
