--- a/index.html
+++ b/index.html
@@ -246,6 +246,12 @@
 
         <div class="container">
             <h2 class="section-title">Albums</h2>
+            <a style="text-decoration: none;" href="">
+                <div class="item">
+                    <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/cheekyboomin2.png">
+                    <p class="item-name">Cheeky Boomin Vol 2</p>
+                </div>
+            </a>
             <a style="text-decoration: none;" href="https://youtube.com/playlist?list=PLJy9H5Xxyv18TxmBDFD4oMt_2azd__hM6&si=2IbFlvgsdLc99-h7">
                 <div class="item">
                     <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/cheekyboomin.png">
@@ -307,11 +313,11 @@
                 </div>
             </div>
         </div>
-        <div style="margin-bottom: 80px;" class="container">
+        <!--<div style="margin-bottom: 80px;" class="container">
             <h2 class="section-title">About</h2>
             <p class="about">Cheeky J is a humble artist from Los Angeles. After releasing his first single "Suburbs Freestyle" on May 30, he decided to keep making more songs. The website was made and designed by Cheeky J. Cheeky J curated and combined a collection of images, incorporating self-captured photographs and personally designed font styles to create the compositions featured on the song covers.</p>
             <img class="about-img" src="https://cheekyjmusic.github.io/music/assets/about.jpg">
-        </div>
+        </div>-->
     </div>
 
     <audio class="audio" id="audio-player" controls>
