--- a/index.html
+++ b/index.html
@@ -291,19 +291,19 @@
                     <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/SuburbsFreestyleRemix.png">
                     <p class="item-name">SB Freestyle Remix</p>
                 </div>
-                <div class="item" onclick="play('Corner Store Twinkie')">
+                <div style="opacity: 0.5;" class="item">
                     <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/CornerStoreTwinkie.png">
                     <p class="item-name">Corner Store Twinkie</p>
                 </div>
-                <div class="item" onclick="play('1860s Lincoln')">
+                <div style="opacity: 0.5;" class="item">
                     <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/1860sLincoln.png">
                     <p class="item-name">1860s Lincoln</p>
                 </div>
-                <div class="item" onclick="play('Sumo Wrestler')">
+                <div style="opacity: 0.5;" class="item">
                     <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/SumoWrestler.png">
                     <p class="item-name">Sumo Wrestler</p>
                 </div>
-                <div class="item" onclick="play('Tacobell Diss')">
+                <div style="opacity: 0.5;" class="item">
                     <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/TacobellDiss.png">
                     <p class="item-name">Taco Bell Diss</p>
                 </div>
@@ -313,14 +313,14 @@
                 </div>
             </div>
         </div>
-        <!--<div style="margin-bottom: 80px;" class="container">
+        <div style="margin-bottom: 80px;" class="container">
             <h2 class="section-title">About</h2>
-            <p class="about">Cheeky J is a humble artist from Los Angeles. After releasing his first single "Suburbs Freestyle" on May 30, he decided to keep making more songs. The website was made and designed by Cheeky J. Cheeky J curated and combined a collection of images, incorporating self-captured photographs and personally designed font styles to create the compositions featured on the song covers.</p>
+            <p class="about">Cheeky J is a humble artist from Los Angeles. After releasing his first single "Suburbs Freestyle" on May 30, he decided to keep making more songs.</p>
             <img class="about-img" src="https://cheekyjmusic.github.io/music/assets/about.jpg">
-        </div>-->
+        </div>
     </div>
 
-    <audio class="audio" id="audio-player" controls>
+    <!--<audio class="audio" id="audio-player" controls>
         <source id="audio-source" src="" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio> 
@@ -338,7 +338,7 @@
     </div>
     <div class="progress-bar-container">
         <div class="progress-bar"></div>
-    </div>
+    </div>-->
     <script>
         window.addEventListener('scroll', function() {
             var artistNameSticky = document.getElementById('artist-name-sticky');
