--- a/index.html
+++ b/index.html
@@ -263,6 +263,10 @@
         <div class="container">
             <h2 style="display: inline;" class="section-title">Singles</h2>
             <div class="item-container">
+                 <div style="opacity:0.8; filter: grayscale(100%);" class="item" onclick="redirect('https://youtube.com/@CheekyJ')">
+                    <img class="item-image" src="https://cheekyjmusic.github.io/music/assets/rainyday.png">
+                    <p class="item-name">Rain Day Freestyle</p>
+                </div>
                 <div class="item" onclick="redirect('https://youtu.be/g8q4cLlgqRM')">
                     <img class="item-image" src="https://cheekyjmusic.github.io/music/assets/Edge.png">
                     <p class="item-name">Edge</p>
