--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         <div class="container">
             <h2 style="display: inline;" class="section-title">Singles</h2>
             <div class="item-container">
-                 <div style="opacity:0.8; filter: grayscale(100%);" class="item" onclick="redirect('https://youtube.com/@CheekyJ')">
+                 <div class="item" onclick="redirect('https://youtu.be/97WFLi0xEDQ')">
                     <img class="item-image" src="https://cheekyjmusic.github.io/music/assets/rainyday.png">
                     <p class="item-name">Rain Day Freestyle</p>
                 </div>
