--- a/index.html
+++ b/index.html
@@ -263,6 +263,10 @@
         <div class="container">
             <h2 style="display: inline;" class="section-title">Singles</h2>
             <div class="item-container">
+                <div class="item" onclick="redirect('https://youtu.be/749pME2Wdq0')">
+                    <img class="item-image" src="https://cheekyjmusic.github.io/music/assets/aftertherain.png">
+                    <p class="item-name">After The Rain</p>
+                </div>
                  <div class="item" onclick="redirect('https://youtu.be/97WFLi0xEDQ')">
                     <img class="item-image" src="https://cheekyjmusic.github.io/music/assets/rainyday.png">
                     <p class="item-name">Rain Day Freestyle</p>
