--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         </div>
 
         <div class="container">
-            <h2 style="display: inline;" class="section-title">Singles</h2>
+            <h2 style="display: inline;" class="section-title">Singles & EPs</h2>
             <div class="item-container">
                 <div class="item" onclick="redirect('https://youtu.be/749pME2Wdq0')">
                     <img class="item-image" src="https://cheekyjmusic.github.io/music/assets/aftertherain.png">
