added mini cooper

--- a/index.html
+++ b/index.html
@@ -263,6 +263,10 @@
         <div class="container">
             <h2 style="display: inline;" class="section-title">Singles & EPs</h2>
             <div class="item-container">
+                <div class="item" onclick="play('Mini Cooper')">
+                    <img class="item-image" src="https://cheekyjmusic.github.io/music/assets/minicooper.jpg">
+                    <p class="item-name">Mini Cooper</p>
+                </div>
                 <div class="item" onclick="redirect('https://youtu.be/749pME2Wdq0')">
                     <img class="item-image" src="https://cheekyjmusic.github.io/music/assets/aftertherain.png">
                     <p class="item-name">After The Rain</p>
