--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
             <h2 style="display: inline;" class="section-title">Singles & EPs</h2>
             <div class="item-container">
                 <div class="item" onclick="play('Mini Cooper')">
-                    <img class="item-image" src="https://cheekyjmusic.github.io/music/assets/MiniCooper.jpg">
+                    <img class="item-image" src="https://cheekyjmusic.github.io/music/assets/MiniCooper.png">
                     <p class="item-name">Mini Cooper</p>
                 </div>
                 <div class="item" onclick="redirect('https://youtu.be/749pME2Wdq0')">
