--- a/index.html
+++ b/index.html
@@ -262,6 +262,10 @@
         <div class="container">
             <h2 style="display: inline;" class="section-title">Singles & EPs</h2>
             <div class="item-container">
+                <div class="item" onclick="play('Dreams')">
+                    <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/cheekyboomin2dlx.png">
+                    <p class="item-name">Dreams</p>
+                </div>
                 <!--<div class="item" onclick="play('Mini Cooper')">
                     <img class="item-image" src="https://cheekyjmusic.github.io/music/assets/MiniCooper.png">
                     <p class="item-name">Mini Cooper</p>
