--- a/index.html
+++ b/index.html
@@ -246,6 +246,10 @@
         <div class="container">
             <h2 class="section-title">Albums</h2>
             <a style="text-decoration: none;" href="https://youtube.com/playlist?list=PLJy9H5Xxyv1-enNhxBtd5QF0Bet51cjnq&si=NQaM9iKo6Yr1kuVV">
+                <div style="opacity: 0.5;" class="item">
+                    <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/Dreams.png">
+                    <p class="item-name">Cheeky Boomin V2 Deluxe</p>
+                </div>
                 <div class="item">
                     <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/cheekyboomin2.png">
                     <p class="item-name">Cheeky Boomin Vol 2</p>
