--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 
         <div class="container">
             <h2 class="section-title">Albums</h2>
-            <a style="text-decoration: none;" href="https://youtube.com/playlist?list=PLJy9H5Xxyv1-enNhxBtd5QF0Bet51cjnq&si=NQaM9iKo6Yr1kuVV">
+            <a style="text-decoration: none;" href="">
                 <div style="opacity: 0.5;" class="item">
                     <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/Dreams.png">
                     <p class="item-name">Cheeky Boomin V2 Deluxe</p>
