--- a/index.html
+++ b/index.html
@@ -186,6 +186,20 @@
         width: 90px;
         height: auto;
      }
+
+     .item.preview-only {
+        opacity: 0.5;
+        filter: grayscale(100%) blur(1px);
+        transition: all 0.3s ease;
+        pointer-events: none; /* Optional: disables clicks if it's truly preview-only */
+    }
+
+    .item.preview-only:hover {
+        opacity: 1;
+        filter: none;
+        pointer-events: auto;
+    }
+
      
     </style>
     <link rel="stylesheet" type="text/css" href="https://cheekyjmusic.github.io/music/player.css">
@@ -246,7 +260,7 @@
         <div class="container">
             <h2 class="section-title">Albums</h2>
             <a style="text-decoration: none;" href="">
-                <div style="opacity: 0.5;" class="item">
+                <div class="item preview-only">
                     <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/Dreams.png">
                     <p class="item-name">Cheeky Boomin V2 Deluxe</p>
                 </div>
