--- a/index.html
+++ b/index.html
@@ -280,6 +280,10 @@
         <div class="container">
             <h2 style="display: inline;" class="section-title">Singles & EPs</h2>
             <div class="item-container">
+                                <div class="item" onclick="play('Chips')">
+                    <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/Chips.png">
+                    <p class="item-name">Chips</p>
+                </div>
                 <div class="item" onclick="play('Dreams')">
                     <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/Dreams.png">
                     <p class="item-name">Dreams</p>
